# Turing_Machine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake_Modules/: Findnlohmann-json.cmake
dependencies/: CMakeLists.txt
src/: cell.h  configuration.cpp  configuration.h  main.cpp  menu.cpp  program.cpp  program.h  tape.cpp  turing_machine.cpp  turing_machine.h  util.cpp  util.h
src/machine/: cell.cpp  cell.h  configuration.cpp  configuration.h  tape.cpp  tape.h  turing_machine.cpp  turing_machine.h
